--- a/about.html
+++ b/about.html
@@ -227,7 +227,7 @@
     </section>
 
     <!-- Our Team -->
-    <section class="mt-22 md:mt-22 lg:mt-25">
+    <!-- <section class="mt-22 md:mt-22 lg:mt-25">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <div class="text-center mb-16">
                 <h2 class="text-3xl font-semibold mb-4 translate" data-en="Key person" data-id="Orang paling berpengaruh">Key person</h2>
@@ -236,7 +236,6 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 mx-auto w-full">
-                <!-- Team Member 1 -->
                 <div
                     class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
                     <div class="h-64 lg:h-90 overflow-hidden">
@@ -261,7 +260,6 @@
                     </div>
                 </div>
 
-                <!-- Team Member 2 -->
                 <div
                     class="bg-white rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
                     <div class="h-64 lg:h-90 overflow-hidden">
@@ -315,7 +313,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="border-t-1 border-gray-200 pb-10 mt-15 md:mt-15 lg:mt-20">
         <div class="footer mt-13 md:mt-15 lg:mt-20 xl:mt-20 2xl:mt-20 px-5 md:px-15 lg:px-15">
