--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                             stroke-width="1" />
                                     </svg>
                                 </span>
-                                <input type="text" placeholder="Search destinations..."
+                                <input id="Form" type="text" placeholder="Search destinations..."
                                     class="w-full border-none outine-none bg-transparent text-gray-700 placeholder-gray-500 focus:ring-0 focus:outline-none">
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                     Or just wanna go wherever the wind takes you?
                 </p>
             </div>
-            <div class="search-parent mt-10 md:w-xl lg:w-1/2 shadow-md">
+            <!-- <div class="search-parent mt-10 md:w-xl lg:w-1/2 shadow-md">
                 <div class="search pl-5 pr-1 py-1 bg-white rounded-xl flex items-center space-x-5 ">
                     <span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -195,15 +195,15 @@
                         Search
                     </button>
                 </div>
-            </div>
+            </div> -->
         </div>
         <div class="relative w-screen overflow-hidden" id="slider-container">
             <div id="slider" class="flex transition-transform duration-700 ease-in-out">
-                <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1920&q=80"
+                <img src="images/lovina-dolphin.jpg"
                     class="w-screen h-[500px] object-cover flex-shrink-0" alt="Slide 1">
-                <img src="https://images.unsplash.com/photo-1519608487953-e999c86e7455?auto=format&fit=crop&w=1920&q=80"
+                <img src="images/melasti-beach.jpg"
                     class="w-screen h-[500px] object-cover flex-shrink-0" alt="Slide 2">
-                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80"
+                <img src="images/kelingking-beach.jpg"
                     class="w-screen h-[500px] object-cover flex-shrink-0" alt="Slide 3">
             </div>
 
@@ -928,6 +928,19 @@
                     </span>
                 </a>
             </div>
+        </div>
+    </section>
+
+    <section class="fixed w-auto bottom-0 right-0 z-50">
+        <div class=" ">
+            <a href="" class="text-sm bg-[var(--primary-color)] duration-300 cursor-pointer hover:bg-[var(--primary-color-hover)] text-white px-4 py-2 rounded-full flex items-center gap-2 mr-5 mb-5">
+                <span class="flex items-center gap-1">
+                    <span class="translate" data-id="Hubungi kami" data-en="Contact us">
+                        Contact Us
+                    </span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M17.6 6.32A7.85 7.85 0 0 0 12 4a7.94 7.94 0 0 0-6.88 11.89L4 20l4.2-1.1a7.9 7.9 0 0 0 3.79 1a8 8 0 0 0 8-7.93a8 8 0 0 0-2.39-5.65M12 18.53a6.6 6.6 0 0 1-3.36-.92l-.24-.15l-2.49.66l.66-2.43l-.16-.25a6.6 6.6 0 0 1 10.25-8.17a6.65 6.65 0 0 1 2 4.66a6.66 6.66 0 0 1-6.66 6.6m3.61-4.94c-.2-.1-1.17-.58-1.35-.64s-.32-.1-.45.1a9 9 0 0 1-.63.77c-.11.14-.23.15-.43 0a5.33 5.33 0 0 1-2.69-2.35c-.21-.35.2-.33.58-1.08a.38.38 0 0 0 0-.35c0-.1-.45-1.08-.61-1.47s-.32-.33-.45-.34h-.39a.7.7 0 0 0-.53.25A2.2 2.2 0 0 0 8 10.17a3.8 3.8 0 0 0 .81 2.05a8.9 8.9 0 0 0 3.39 3a3.85 3.85 0 0 0 2.38.5a2 2 0 0 0 1.33-.94a1.6 1.6 0 0 0 .12-.94c-.09-.1-.22-.15-.42-.25"/></svg>
+                </span>
+            </a>
         </div>
     </section>
 
