--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 class="wrp-chs grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-4 2xl:grid-cols-4 gap-5 mt-5 md:mt-10 lg:mt-9 xl:mt-10 2xl:mt-10">
                 <div class="chs-item bg-white rounded-lg shadow-md p-4 w-full">
                     <img src="images/driver.png" alt="" class="w-18 md:w-19 lg:w-21 xl:w-21 2xl:w-21 mb-3">
-                    <h3 class="font-semibold text-lg md:text-2xl lg:text-xl xl:text-xl 2xl:text-xl"
+                    <h3 class="font-semibold text-lg md:text-2xl lg:text-xl xl:text-xl 2xl:text-xl translate"
                         data-en="Experienced local drivers" data-id="Supir lokal berpengalaman">
                         Experienced local drivers
                     </h3>
