--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                         data-en="Experienced local drivers" data-id="Supir lokal berpengalaman">
                         Experienced local drivers
                     </h3>
-                    <p class="mt-2 text-sm md:text-base lg:text-sm xl:text-sm 2xl:text-sm" data-en="Our friendly local drivers
+                    <p class="mt-2 text-sm md:text-base lg:text-sm xl:text-sm 2xl:text-sm translate" data-en="Our friendly local drivers
                         know Bali inside out and are ready to guide you to the best destinations on the island."
                         data-id="Pengemudi lokal kami yang ramah mengenal Bali luar dalam dan siap memandu Anda ke destinasi terbaik di pulau ini.">
                         Our friendly local drivers
